--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,5 @@ jobs:
     steps:
       - name: PR Benchmarks
         uses: DeMoorJasper/parcel-benchmark-action@master
+        env:
+          BOT_GITHUB_PASSWORD: ${{ secrets.BOT_GITHUB_PASSWORD }}
